# chemgen

./: .gitmodules  README.md  configuration.yaml  requirements.txt
chemical_mechanisms/: burke.yaml  double_a.yaml  download.sh  extract_submechanism.py  ffcm2_h2.yaml  ffcm2_h2_notb.yaml  hydrogen_34.yaml  mechanism_info.py  one_reaction.yaml  simple_fall_offs.yaml  simple_hydrogen_test.yaml  simple_lind.yaml  simple_mech.yaml  simple_mech_arr.yaml  simple_pda.yaml  simple_sri.yaml  simple_tb.yaml
nn/: .gitignore  configuration.yaml
nn/src/: .gitignore  backwards_euler.h  chemgen.cpp  direct.h  generated_constants.h  linear_solvers.h  post_ct.py  sdirk.h  test.yaml  thermotransport_fits.h
paper/: citations.bib  citations_runover.bib  initial_communicaiton.lyx  initial_communicaiton.tex
paper/reference_lyx/: manuscript_pt1.lyx  manuscript_pt2.lyx  manuscript_viscous.lyx  numerical_flux_rns.lyx
preconditioner/: .gitignore
preconditioner/genchem/: .gitignore
run/: .gitignore
src/: configuration.yaml  test_headers.py
target_eamples/: test_cantera.cpp  test_tbb.cpp
target_examples/: linear_solvers.h  main.cpp  tbb_examples.cpp
test/: .gitignore  configuration_header.yaml  tbb_examples.cpp  test_headers.py  test_read.h.in  test_replace.py  test_tb_configuration.yaml  test_tbb
tutorial/: README.md
tutorial/01_mechanism_creation/: .gitignore  CMakeLists.txt  configuration.yaml  test_configuration.yaml
tutorial/01_mechanism_creation/src/: chemgen.cpp  generated_constants.h  reactions.h  source.h  thermotransport_fits.h  types_inl.h
(+325 files in other folders)
